# client

./: .gitignore  .luacheckrc  AppImageBuilder.yml  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: build.yml  lua.yml
.github/workflows_disabled/: android.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/minetest/minetest/: GameActivity.java
android/app/src/main/res/values/: strings.xml
android/native/: build.gradle
android/native/jni/: Android.mk
builtin/: init.lua  settingtypes.txt
builtin/client/: change_password.lua  chatcommands.lua  esc.lua  init.lua  misc.lua  tab_playerlist.lua
builtin/common/: chatcommands.lua
builtin/fstk/: tabview.lua  ui.lua
builtin/locale/: template.txt
builtin/mainmenu/: common.lua  dlg_about.lua  dlg_register.lua  dlg_settings_advanced.lua  game_theme.lua  init.lua  pkgmgr.lua  tab_about.lua  tab_connect.lua  tab_settings.lua
builtin/mainmenu/settings/: components.lua  dlg_settings.lua  init.lua  settingtypes.lua  shader_component.lua  shadows_component.lua
client/shaders/second_stage/: opengl_fragment.glsl
cmake/Modules/: MinetestAndroidLibs.cmake
misc/: voxelmanip_classic.desktop  voxelmanip_classic.exe.manifest  winresource.rc
src/: CMakeLists.txt  activeobjectmgr.h  chat.cpp  chat.h  clientiface.cpp  clientiface.h  cmake_config.h.in  collision.cpp  config.h  constants.h  debug.cpp  defaultsettings.cpp  emerge.cpp  emerge.h  environment.cpp  environment.h  exceptions.h  filesys.cpp  filesys.h  gamedef.h  gameparams.h  gettext.cpp  httpfetch.cpp  httpfetch.h  inventory.cpp  inventory.h  inventorymanager.cpp  inventorymanager.h  itemdef.cpp  log.cpp  main.cpp  map.cpp  map.h  mapblock.cpp  mapblock.h  mapnode.cpp  mapnode.h  nodedef.cpp  nodedef.h  noise.cpp  (+25 more)
src/client/: camera.cpp  camera.h  client.cpp  client.h  clientevent.h  clientlauncher.cpp  clientlauncher.h  clientmap.cpp  clientmap.h  clientmedia.cpp  clouds.cpp  clouds.h  content_cao.cpp  content_mapblock.cpp  content_mapblock.h  game.cpp  gameui.cpp  hud.cpp  inputhandler.cpp  inputhandler.h  keycode.cpp  keys.h  localplayer.h  mapblock_mesh.cpp  mapblock_mesh.h  particles.cpp  renderingengine.cpp  shader.cpp  sky.cpp  sky.h  tile.cpp  wieldmesh.cpp  wieldmesh.h
src/content/: CMakeLists.txt  mods.cpp  subgames.cpp  subgames.h
src/database/: CMakeLists.txt  database-dummy.cpp  database-dummy.h  database-files.cpp  database.cpp  database.h
src/gui/: CMakeLists.txt  guiChatConsole.cpp  guiEngine.cpp  guiFormSpecMenu.cpp  guiFormSpecMenu.h  guiKeyChangeMenu.cpp  guiPasswordChange.cpp  guiScrollBar.cpp  guiScrollBar.h  guiSkin.cpp  guiSkin.h  mainmenumanager.h  touchscreengui.cpp  touchscreengui.h
src/irrlicht_changes/: CGUITTFont.cpp
src/mapgen/: CMakeLists.txt  mapgen.cpp  mapgen.h  mapgen_singlenode.cpp
src/network/: CMakeLists.txt  clientpackethandler.cpp  serveropcodes.cpp  serveropcodes.h  serverpackethandler.cpp  socket.cpp
src/script/: scripting_mainmenu.cpp  scripting_server.cpp  scripting_server.h
src/script/common/: c_content.cpp  c_content.h  c_converter.cpp  c_converter.h  c_packer.cpp  c_packer.h
src/script/cpp_api/: CMakeLists.txt  s_async.cpp  s_base.cpp  s_base.h  s_client.cpp  s_env.cpp  s_env.h  s_item.cpp  s_item.h  s_node.cpp  s_node.h  s_nodemeta.cpp  s_player.cpp  s_player.h  s_security.cpp  s_security.h  s_server.cpp  s_server.h
src/script/lua_api/: CMakeLists.txt  l_base.cpp  l_base.h  l_client.cpp  l_client.h  l_env.cpp  l_env.h  l_inventory.cpp  l_inventory.h  l_item.cpp  l_item.h  l_localplayer.cpp  l_mainmenu.cpp  l_mainmenu.h  l_nodemeta.cpp  l_nodemeta.h  l_object.cpp  l_object.h  l_particles.cpp  l_particles.h  l_server.cpp  l_server.h  l_settings.cpp  l_settings.h  l_util.cpp  l_util.h
src/server/: CMakeLists.txt  activeobjectmgr.cpp  activeobjectmgr.h  luaentity_sao.cpp  luaentity_sao.h  mods.cpp  mods.h  player_sao.cpp  player_sao.h  serveractiveobject.cpp  serveractiveobject.h  serverinventorymgr.cpp  serverinventorymgr.h  unit_sao.cpp  unit_sao.h
src/util/: CMakeLists.txt  auth.cpp  auth.h  container.h  numeric.cpp  numeric.h  quicktune.h  string.cpp  string.h
util/: updatepo.sh
util/buildbot/: buildwin32.sh  buildwin64.sh  common.sh
util/ci/: build.sh  common.sh
